# Meeting

./: CMakeLists.txt  Meeting.pro  README.md  chat_dialog.cpp  chat_dialog.h  chat_dialog.ui  chat_info_widget.cpp  chat_info_widget.h  chat_info_widget.ui  kernel.cpp  kernel.h  login_dialog.cpp  login_dialog.h  login_dialog.ui  main.cpp  main_dialog.cpp  main_dialog.h  main_dialog.ui  main_windows.cpp  main_windows.h  room_dialog.cpp  room_dialog.h  room_dialog.ui  set_user.cpp  set_user.h  set_user.ui  source.qrc  user_show.cpp  user_show.h  user_show.ui  work_thread.cpp  work_thread.h
AudioApi/: AudioApi.pri  audio_common.h  audio_read.cpp  audio_read.h  audio_write.cpp  audio_write.h
MD5/: md5.cpp  md5.h
VideoApi/: desk_read.cpp  desk_read.h  facedetect.cpp  facedetect.h  video_common.h  video_read.cpp  video_read.h  videoapi.pri
build-qthread-Desktop_Qt_5_12_11_MinGW_32_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  ui_do_work_dialog.h
build-qthread-Desktop_Qt_5_12_11_MinGW_32_bit-Debug/debug/: moc_do_work_dialog.cpp  moc_mainwindow.cpp  moc_mythread.cpp  moc_work_thread.cpp
include/: block_epoll_net.h  clogic.h  packdef.h
netapi/: login_dialog.h  login_dialog.ui  netapi.pri
netapi/mediator/: INetMediator.cpp  INetMediator.h  TcpClientMediator.cpp  TcpClientMediator.h  TcpServerMediator.cpp  TcpServerMediator.h  UdpMediator.cpp  UdpMediator.h
netapi/net/: INet.cpp  INet.h  TcpClient.cpp  TcpClient.h  TcpServer.cpp  TcpServer.h  UdpNet.cpp  UdpNet.h  packdef.h
src/: Mysql.cpp  block_epoll_net.cpp  clogic.cpp
uiapi/: customwidget.cpp
